[package]
name = "ch8alib"
version = "0.1.0"
authors = ["ahdavis <ahdavis13@gmail.com>"]
edition = "2018"
description = "Workspace dependency for ch8asm"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch8-isa = "0.1.1"
